<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movieDetails"
            type="assignment.imdb.com.careemassignmentaac.db.entity.MovieEntity"/>


        <variable
            name="clickHandler"
            type="assignment.imdb.com.careemassignmentaac.ui.MovieDetailsActivity"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimaryDark">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_back_black_24dp"
                            android:onClick="@{clickHandler::onBackClicked}"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:gravity="center_vertical|start"
                            android:lines="1"
                            android:maxLines="1"
                            android:text="@{movieDetails.movieTitle}"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_backdropImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="65dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher_background"
                        app:posterPath="@{movieDetails.backdropPath}"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="120dp"
                            android:layout_margin="5dp"
                            android:elevation="20dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:id="@+id/iv_posterImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:src="@mipmap/ic_launcher"
                                app:posterPath="@{movieDetails.posterPath}"/>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="65dp"
                            android:ellipsize="end"
                            android:gravity="center_vertical|start"
                            android:lines="1"
                            android:maxLines="1"
                            android:text="@{movieDetails.releaseDate}"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movieDetails.overview}"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/extra_info"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="9dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_favorite_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(movieDetails.vote_count)}"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="9dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_attach_money_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(movieDetails.revenue)}"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="9dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_timer_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(movieDetails.runtime)}"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/vote_count"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/revenue"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/run_time"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/asd"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_imdb"
                    android:tint="@color/mdtp_white"
                    android:onClick="@{clickHandler::setOnClick}"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:tint="@color/mdtp_white"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:onClick="@{clickHandler::setOnClick}"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</layout>



